style(MainPage): fixed height overflow

--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -1,6 +1,7 @@
 .content {
   display: grid;
   gap: 8px;
+  align-items: start;
 }
 
 .withFilter {
